package uax.examen4.Halting_Problem;

import javafx.application.Application;
import uax.examen4.Halting_Problem.Vista.VistaGlobal;

public class Main {
    public static void main(String[] args) {
        Application.launch(VistaGlobal.class, args);
    }
}