package uax.examen4.Halting_Problem.Modelo.Maquinas_De_Estado.MaquinaCheck;

/**
 * Enumeración que representa los posibles estados de una máquina.
 */
public enum EstadoMaquina {
    SE_DETINE,//Determina si la máquina se detiene
    EN_BUCLE//Determina si la máquina entra en un bucle infinito
}