package uax.examen4.Halting_Problem.Modelo;

/**
 * Enumeración que representa los tipos de solicitudes que puede manejar la aplicación.
 */
public enum TipoSolicitud {
    ORDENAR,//Solcitud para ordenar una lista (MaquinaQueSeDetiene)
    IMPRIMIR_HORA//Solicitud para imprimir la hora actual (MaquinaEnBucle)
}